--- a/pages/eventpage.html
+++ b/pages/eventpage.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CONVERGE :: Manage Event</title>
+    <title>CONVERGE :: Manage Events</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -22,6 +22,10 @@
 
     <!-- Custom Fonts -->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    
+    <!-- Calendar JS -->
+    <script src="js/DayPilot/daypilot-all.min.js" type="text/javascript"></script>
+    <script src="js/daypilot.js" type="text/javascript"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -45,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand" href="index.html">CONVERGE</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -370,7 +374,7 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Forms</h1>
+                    <h1 class="page-header">Events Manager</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -378,6 +382,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
+                    <div id="dp"></div>
                         <div class="panel-heading">
                             Basic Form Elements
                         </div>
