--- a/pages/eventpage.html
+++ b/pages/eventpage.html
@@ -297,17 +297,16 @@
                             <table class="table table-striped" align="center">
                                 <thead>
                                     <tr>
-                                        <th>ID.</th>
                                         <th>Name</th>
                                         <th>Date</th>
                                         <th>Venue</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="pastevent in pastevents">
-                                        <td>{{ pastevent.id }}</td>
-                                        <td>{{ pastevent.peName }}</td>
-                                        <td>{{ pastevent.peDate }}</td>
+                                    <tr ng-repeat="event in events">
+                                        <td>{{ event.eName }}</td>
+                                        <td>{{ event.eDate.replace("T", " ") }}</td>
+                                        <td>{{ event.eVenue }}</td>
                                     </tr>
                                 </tbody>
                             </table>
