--- a/pages/eventpage.html
+++ b/pages/eventpage.html
@@ -57,6 +57,9 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
+                <li>
+                    <a href="pricing.html">Upgrade Now</a>
+                </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
@@ -248,7 +251,69 @@
                             Calendar
                         </div>
                         <div class="panel-body">
-                            
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th colspan='7' style="text-align:center">MARCH 2015</th>
+                                    </tr>
+                                    <tr>
+                                        <th>Sunday</th>
+                                        <th>Monday</th>
+                                        <th>Tuesday</th>
+                                        <th>Wednesday</th>
+                                        <th>Thursday</th>
+                                        <th>Friday</th>
+                                        <th>Saturday</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>2</td>
+                                        <td>3</td>
+                                        <td>4</td>
+                                        <td>5</td>
+                                        <td>6</td>
+                                        <td>7</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>9</td>
+                                        <td>10</td>
+                                        <td>11</td>
+                                        <td>12</td>
+                                        <td>13</td>
+                                        <td>14</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>16</td>
+                                        <td>17</td>
+                                        <td>18</td>
+                                        <td>19</td>
+                                        <td>20</td>
+                                        <td>21</td>
+                                    </tr>
+                                    <tr>
+                                        <td>22</td>
+                                        <td>23</td>
+                                        <td>24</td>
+                                        <td>25</td>
+                                        <td>26</td>
+                                        <td>27</td>
+                                        <td>28</td>
+                                    </tr>
+                                    <tr>
+                                        <td>29</td>
+                                        <td>30</td>
+                                        <td>31</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -340,14 +405,16 @@
                                                                 <thead>
                                                                     <tr>
                                                                         <th>Name</th>
-                                                                        <th>Action</th>
+                                                                        <th>Email</th>
+                                                                        <th>Invite</th>
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
-                                                                    <tr ng-repeat "contact in contacts">
-                                                                        <td>{{ contact.name }}</td>
+                                                                    <tr ng-repeat="contact in contacts">
+                                                                        <td>{{ contact.cName }}</td>
+                                                                        <td>{{ contact.cEmail }}</td>
                                                                         <td>
-                                                                            <input type="checkbox" value="invited">
+                                                                            <input type="checkbox" name="invited">
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -355,7 +422,7 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                                        <button type="button" class="btn btn-primary">Send Invites</button>
                                                         </div>
                                                     </div>
                                                 </div>
