--- a/homepage.html
+++ b/homepage.html
@@ -193,7 +193,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Step #1</h4>
-                                    <h4 class="subheading">Create your invite!</h4>
+                                    <h4 class="subheading">Create your event!</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -207,7 +207,7 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Step #2</h4>
-                                    <h4 class="subheading">Invite your Contacts</h4>
+                                    <h4 class="subheading">Select your Contacts</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
