--- a/homepage.html
+++ b/homepage.html
@@ -81,7 +81,7 @@
             <div class="intro-text">
                <div class="intro-lead-in">A Growing Platform for Professional Networking</div>
                 <!-- <div class="intro-heading">It's Nice To Meet You</div> -->
-                <button class="page-scroll btn btn-xl" ng-click="login('google')">Sign In</button>
+                <button class="page-scroll btn btn-xl" onClick="redirectPage()">Check us out!</button>
                 <br> <br>
                 <a href="#about" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
