--- a/pages/cards.html
+++ b/pages/cards.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CONVERGE :: Pricing Plan</title>
+    <title>CONVERGE :: eBusiness Card</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -196,7 +196,7 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search Events">
+                                <input type="text" class="form-control" placeholder="Search Cards">
                                 <span class="input-group-btn">
                                 <button class="btn btn-default" type="button">
                                     <i class="fa fa-search"></i>
@@ -215,7 +215,7 @@
                                     <a href="eventpage.html"> Event Manager</a>
                                 </li>
                                 <li>
-                                    <a href="m#"> Join an Event</a>
+                                    <a href="#"> Join an Event</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -239,92 +239,80 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Pricing Plan</h1>
+                    <h1 class="page-header">eBusiness Cards</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-md-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading" style="text-align:center; background:#337ab7; color:#FFFFFF">
-                            <h1><b>FREE TIER - $0.00/mth</b></h1>
+                <section id="portfolio">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 text-center">
+                            <h2 class="section-heading">Business Cards Category</h2>
+                            <h3 class="section-subheading text-muted">View your own cards or your partners' cards!.</h3>
                         </div>
-                        <div class="panel-body">
-                            <ul>
-                                <li><h3>Join Networking Sessions</h3></li>
-                                <li><h3>Send Invites to your saved contacts</h3></li>
-                                <li><h3>Upload / Create / Exchange Business Cards</h3></li>
-                                <li><h3>Pair Memo with Business Cards</h3></li>
-                                <li><h3>Set Reminder</h3></li>
-                                <li><h3>1GB of Storage</h3></li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Choose this plan</button>
-                            <div class="modal fade" id="myModal" tabindex="-1" roles="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                            <h4 class="modal-title" id="myModalLabel">Note: </h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>This is only just a test button. There will be no payment necessary.</p>
-                                            <p>Please feel free to explore this website and if there is any questions, you can drop me a text !However,
-                                            remember to go to our feedback form located on the left side-bar of this website and provide us with
-                                            detailed and constructive feedback!
-                                            </p>
-                                            <p>Your help is kindly appreciated :)</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Dismiss</button>
-                                        </div>
-                                    </div>
-                                </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                <img src="../img/portfolio/mycard.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>My Cards</h4>
+                                <p class="text-muted">Your own created cards</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                               <img src="../img/portfolio/unionbank_businesscard_resized.png" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>Oscar DOMINGUEZ</h4>
+                                <p class="text-muted">Investment Banker</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                                <img src="../img/portfolio/software_engineer.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>Jonathan MILLEY</h4>
+                                <p class="text-muted">Software Engineer</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                                <img src="../img/portfolio/Florist.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>Lynn FOSBENDER</h4>
+                                <p class="text-muted">Florist, Internal Decorator</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                                <img src="../img/portfolio/doctor.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>Dr. Ivan Braginski MD. PSCHOT</h4>
+                                <p class="text-muted">Psychologist, Specialist</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 portfolio-item">
+                            <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                                <img src="../img/portfolio/researcher.jpg" class="img-responsive" alt="">
+                            </a>
+                            <div class="portfolio-caption">
+                                <h4>Raja ZAHARUL Ashriq</h4>
+                                <p class="text-muted">Ecology Researcher</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading" style="text-align:center; background:#2c4985; color:#FFFFFF">
-                            <h1><b>PAID TIER - $9.99/mth</b></h1>
-                        </div>
-                        <div class="panel-body">
-                        <p><b>Additional Benefits: </b></p>
-                            <ul>
-                                <li><h3>Host Networking Sessions</h3></li>
-                                <li><h3>Send Notifications at customed timing</h3></li>
-                                <li><h3>Send Invites to anyone</h3></li>
-                                <li><h3>Categorize and tag your eBusiness Cards</h3></li>
-                                <li><h3>Search "deleted" cards</h3></li>
-                                <li><h3>Network Session Analytics</h3></li>
-                                <li><h3>Unlimited Storage</h3></li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Choose this plan</button>
-                            <div class="modal fade" id="myModal" tabindex="-1" roles="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                            <h4 class="modal-title" id="myModalLabel">Note: </h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>This is only just a test button. There will be no payment necessary.</p>
-                                            <p>Please feel free to explore this website and if there is any questions, you can drop me a text !However,
-                                            remember to go to our feedback form located on the left side-bar of this website and provide us with
-                                            detailed and constructive feedback!
-                                            </p>
-                                            <p>Your help is kindly appreciated :)</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-default" data-dismiss="modal">Dismiss</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            </section>
             </div>
             <!-- /.row -->
         </div>
