--- a/pages/eventpage.html
+++ b/pages/eventpage.html
@@ -215,7 +215,7 @@
                                     <a href="eventpage.html"> Event Manager</a>
                                 </li>
                                 <li>
-                                    <a href="m#"> Join an Event</a>
+                                    <a href="#"> Join an Event</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
