--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Converge : Cloud Assignment 2">
+    <meta name="description" content="Converge2 : Cloud Assignment 2">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Converge</title>
+    <title>Converge2</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kaijie/Converge">View on GitHub</a>
 
-          <h1 id="project_title">Converge</h1>
+          <h1 id="project_title">Converge2</h1>
           <h2 id="project_tagline">Cloud Assignment 2</h2>
 
             <section id="downloads">
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Converge maintained by <a href="https://github.com/kaijie">kaijie</a></p>
+        <p class="copyright">Converge2 maintained by <a href="https://github.com/kaijie">kaijie</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
