--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Host Networking Session</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Take charge! Organize and host your very own netowrking session with a few clicks of the button!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -130,7 +130,7 @@
                         <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Analytics</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Get customized data for analysis on your networking sessions!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -138,7 +138,10 @@
                         <i class="fa fa-bell fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Set Reminders</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Afraid you are forgetful? Worry no more as Converge allows you to set reminders! Be it a reminder to attend a 
+                        networking session or meet up with a partner you met through the session! Converge Reminders will actively inform you of what is
+                        ahead!
+                    </p>
                 </div>
             </div>
         </div>
@@ -160,7 +163,7 @@
                         <i class="fa fa-angellist  fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">$0.00/mth</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Offers you a basic variety of services such as joining events, adding contacts, creating eBusiness cards and setting reminders.</p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -168,7 +171,7 @@
                         <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">$9.99/mth</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Offers you additional services such as analytics, hosting your own netowkring sessions, store more eBusiness cards and sending notifications.</p>
                 </div>
             </div>
         </div>
@@ -196,7 +199,7 @@
                                     <h4 class="subheading">Create your event!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Using a customized form, Converge allows you to create an event with just 3 details: Name, Time, Place!</p>
                                 </div>
                             </div>
                         </li>
@@ -210,7 +213,7 @@
                                     <h4 class="subheading">Select your Contacts</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">After creating an event, select your desired contacts and send the invite!</p>
                                 </div>
                             </div>
                         </li>
@@ -224,7 +227,7 @@
                                     <h4 class="subheading">Send out the invite!</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Once, all are in place, just press the "Invite" button and your friends will get it right away!</p>
                                 </div>
                             </div>
                         </li>
@@ -245,7 +248,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Cardistry 2015</span>
+                    <span class="copyright">Copyright &copy; Converge 2015</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
