--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script>
+        var redirect = function() {
+            windows.location.href("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
+        }
+    </script>
 
 </head>
 
@@ -81,8 +86,7 @@
             <div class="intro-text">
                <div class="intro-lead-in">A Growing Platform for Professional Networking</div>
                 <!-- <div class="intro-heading">It's Nice To Meet You</div> -->
-                <button class="page-scroll btn btn-xl">
-                    <a href="http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html">Check us out!</a>
+                <button class="page-scroll btn btn-xl" onClick="redirect()">Check us out!
                 </button>
                 <br> <br>
                 <a href="#about" class="btn btn-circle page-scroll">
