--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="intro-text">
                <div class="intro-lead-in">A Growing Platform for Professional Networking</div>
                 <!-- <div class="intro-heading">It's Nice To Meet You</div> -->
-                <button class="page-scroll btn btn-xl" onClick="redirect()">Check us out!
+                <button class="page-scroll btn btn-xl" onclick="redirect()">Check us out!
                 </button>
                 <br> <br>
                 <a href="#about" class="btn btn-circle page-scroll">
