--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <![endif]-->
     <script>
         var redirect = function() {
-            windows.location.href("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
+            window.location.href("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
         }
     </script>
 
