--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script>
-        var redirect = function() {
+        function redirect() {
             window.location.href("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
         };
     </script>
