--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <![endif]-->
     <script>
         function redirect() {
-            window.location.href("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
+            window.location.assign("http://peisin.github.io/startbootstrap-sb-admin-2/pages/homepage.html");
         };
     </script>
 
