--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Who we are</h2>
+                    <h3 class="section-subheading text-muted">This is just a sample video.</h3>
                 </div>
             </div>
             <div class="row text-center">
